# mc_state_observation

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  package.yaml
debian/: changelog
etc/: CMakeLists.txt
etc/MCKineticsObserver/: MCKineticsObserver.yaml
etc/MCKineticsObserver/robots/: hrp5_p.yaml  jvrc1.yaml  rhps1.yaml
etc/MCValinor/: MCValinor.yaml
etc/MCWaiko/: MCWaiko.yaml
etc/Tilt/: Tilt.yaml
include/mc_state_observation/: AttitudeObserver.h  MCKineticsObserver.h  MCValinor.h  MCVanytEstimator.h  MCViking.h  MCWaiko.h  MCWaikoHumanoid.h  MocapObserver.h  MocapVisualizer.h  NaiveOdometry.h  ObjectObserver.h  ObjectObserver2.h  PressureForceSensorObserver.h  SLAMObserver.h  SLAMObserver2.h  TiltObserver.h  TiltObserverOdometry.h  VisionBasedObserver.h  filtering.h  gui_helpers.h  ros.h
include/mc_state_observation/conversions/: kinematics.h
include/mc_state_observation/measurements/: Contact.h  ContactWithSensor.h  ContactWithSensor_remove.h  ContactsDetector.h  ContactsDetector.hpp  ContactsDetectorConfiguration.h  ContactsManager.h  ContactsManager.hpp  ContactsManagerConfiguration.h  IMU.h  measurements.h  measurements_remove.h
include/mc_state_observation/odometry/: LeggedOdometryManager.h  LeggedOdometryManager.hpp  LeggedOdometryManager_remove.h  LeggedOdometryManager_remove.hpp
src/: AttitudeObserver.cpp  CMakeLists.txt  MCKineticsObserver.cpp  MCValinor.cpp  MCVanytEstimator.cpp  MCVanyte.cpp  MCViking.cpp  MCWaiko.cpp  MCWaikoHumanoid.cpp  MocapObserverROS.cpp  MocapVisualizer.cpp  NaiveOdometry.cpp  ObjectObserver.cpp  ObjectObserver2.cpp  PressureForceSensorObserver.cpp  SLAMObserver.cpp  SLAMObserver2.cpp  TiltObserver.cpp  TiltObserverOdometry.cpp  VisionBasedObserver.cpp  filtering.cpp
src/conversions/: kinematics.cpp
src/odometry/: LeggedOdometryManager.cpp
tests/: CMakeLists.txt  Test_Attitude.yaml  Test_MCKineticsObserver.yaml  Test_MCValinor.yaml  Test_MocapObserverROS.yaml  Test_NaiveOdometry.yaml  Test_Object.yaml  Test_SLAM.yaml  Test_Tilt.yaml  config.in.cpp  mc_rtc.in.yaml  test_run.cpp
